@@ -12,7 +12,8 @@
           - SparseBooleanMatrix: remove Rows() method (not necessary)
           - Matrix<T>: perform bounds check only when DEBUG is set;
             faster GetRow()/SetRow(); generic return types
-          - MatrixUtils: remove ContainsNaN() method
+          - MatrixUtils: remove ContainsNaN()
+          - VectorUtils: add L1Norm()
 	- documentation
           - some API doc improvements
 
